📦 NEW: npm 包的发布流程

--- a/javascript/如何实现一个深拷贝.md
+++ b/javascript/如何实现一个深拷贝.md
@@ -124,25 +124,7 @@ _(这个方法也会出现上一节提到的问题)_
 由于要面对不同的对象(正则、数组、Date 等)要采用不同的处理方式，我们需要实现一个对象类型判断函数。
 
 ```javascript
-const isType = (obj, type) => {
-  if (typeof obj !== "object") return false;
-  const typeString = Object.prototype.toString.call(obj);
-  let flag;
-  switch (type) {
-    case "Array":
-      flag = typeString === "[object Array]";
-      break;
-    case "Date":
-      flag = typeString === "[object Date]";
-      break;
-    case "RegExp":
-      flag = typeString === "[object RegExp]";
-      break;
-    default:
-      flag = false;
-  }
-  return flag;
-};
+      const getType = (val) => Object.prototype.toString.call(val).slice(8, -1);
 ```
 
 这样我们就可以对特殊对象进行类型判断了,从而采用针对性的克隆策略.
@@ -150,7 +132,7 @@ const isType = (obj, type) => {
 ```javascript
 const arr = Array.of(3, 4, 5, 2);
 
-console.log(isType(arr, "Array")); // true
+console.log(getType(arr) === "Array"); // true
 ```
 
 对于正则对象,我们在处理之前要先补充一点新知识.
@@ -175,82 +157,44 @@ const getRegExp = (re) => {
  * @param  {[type]} parent object 需要进行克隆的对象
  * @return {[type]}        深克隆后的对象
  */
-const clone = (parent) => {
-  // 维护两个储存循环引用的数组
-  const parents = [];
-  const children = [];
+// 深拷贝
+const cloneDeep = (value, hash = new WeakMap()) => {
+  if (!isObject(value)) return value;
 
-  const _clone = (parent) => {
-    if (parent === null) return null;
-    if (typeof parent !== "object") return parent;
+  const type = getType(value);
+  const ctor = value.constructor;
+  let newObj = null;
+  // 初始化新值
+  switch (type) {
+    case "Array":
+      newObj = [];
+      break;
+    case "Date":
+      newObj = new Date(value.getTime());
+      break;
+    case "RegExp":
+      const flags = getRegFlags(value);
+      newObj = new RegExp(value.source, flags);
+      newObj.lastIndex = value.lastIndex;
+      break;
+    // 其他类型
+    default:
+      newObj = Object.create(Object.getPrototypeOf(value));
+  }
 
-    let child, proto;
+  // 处理循环引用
+  if (hash.has(value)) return hash.get(value);
+  hash.set(value, newObj);
 
-    if (isType(parent, "Array")) {
-      // 对数组做特殊处理
-      child = [];
-    } else if (isType(parent, "RegExp")) {
-      // 对正则对象做特殊处理
-      child = new RegExp(parent.source, getRegExp(parent));
-      if (parent.lastIndex) child.lastIndex = parent.lastIndex;
-    } else if (isType(parent, "Date")) {
-      // 对Date对象做特殊处理
-      child = new Date(parent.getTime());
-    } else {
-      // 处理对象原型
-      proto = Object.getPrototypeOf(parent);
-      // 利用Object.create切断原型链
-      child = Object.create(proto);
-    }
+  for (let key in value) {
+    newObj[key] = cloneDeep(value[key], hash);
+  }
 
-    // 处理循环引用
-    const index = parents.indexOf(parent);
-
-    if (index != -1) {
-      // 如果父数组存在本对象,说明之前已经被引用过,直接返回此对象
-      return children[index];
-    }
-    parents.push(parent);
-    children.push(child);
-
-    for (let i in parent) {
-      // 递归
-      child[i] = _clone(parent[i]);
-    }
-
-    return child;
-  };
-  return _clone(parent);
+  return newObj;
 };
 ```
 
-我们做一下测试
 
-```javascript
-function person(pname) {
-  this.name = pname;
-}
-
-const Messi = new person("Messi");
-
-function say() {
-  console.log("hi");
-}
-
-const oldObj = {
-  a: say,
-  c: new RegExp("ab+c", "i"),
-  d: Messi,
-};
-
-oldObj.b = oldObj;
-
-const newObj = clone(oldObj);
-console.log(newObj.a, oldObj.a); // [Function: say] [Function: say]
-console.log(newObj.b, oldObj.b); // { a: [Function: say], c: /ab+c/i, d: person { name: 'Messi' }, b: [Circular] } { a: [Function: say], c: /ab+c/i, d: person { name: 'Messi' }, b: [Circular] }
-console.log(newObj.c, oldObj.c); // /ab+c/i /ab+c/i
-console.log(newObj.d.constructor, oldObj.d.constructor); // [Function: person] [Function: person]
-```
 
 当然,我们这个深克隆还不算完美,例如 Buffer 对象、Promise、Set、Map 可能都需要我们做特殊处理，另外对于确保没有循环引用的对象，我们可以省去对循环引用的特殊处理，因为这很消耗时间，不过一个基本的深克隆函数我们已经实现了。
 
@@ -258,4 +202,92 @@ console.log(newObj.d.constructor, oldObj.d.constructor); // [Function: person] [
 
 ## 总结
 
-实现一个完整的深克隆是由许多坑要踩的,首先要对数据结构
+实现一个完整的深克隆是由许多坑要踩的,首先要对数据类型和数据结构有足够多的认识，还就就是要考虑到多种边界条件
+
+
+**全部代码**
+```javascript
+ // 类型检查
+      const getType = (val) => Object.prototype.toString.call(val).slice(8, -1);
+
+      // 构建正则
+      const getRegFlags = (regExp) => {
+        let flags = "";
+        if (regExp.global) flags += "g";
+        if (regExp.ignoreCase) flags += "i";
+        if (regExp.multiline) flags += "m";
+        return flags;
+      };
+
+      // 复杂类型判断
+      const isObject = (val) => typeof val !== null && typeof val === "object";
+
+      // 深拷贝
+      const cloneDeep = (value, hash = new WeakMap()) => {
+        if (!isObject(value)) return value;
+
+        const type = getType(value);
+        const ctor = value.constructor;
+        let newObj = null;
+        // 初始化新值
+        switch (type) {
+          case "Array":
+            newObj = [];
+            break;
+          case "Date":
+            newObj = new Date(value.getTime());
+            break;
+          case "RegExp":
+            const flags = getRegFlags(value);
+            newObj = new RegExp(value.source, flags);
+            newObj.lastIndex = value.lastIndex;
+            break;
+          // 其他类型
+          default:
+            newObj = Object.create(Object.getPrototypeOf(value));
+        }
+
+        // 处理循环引用
+        if (hash.has(value)) return hash.get(value);
+        hash.set(value, newObj);
+
+        for (let key in value) {
+          if (!value.hasOwnProperty(key)) {
+            newObj[key] = cloneDeep(value[key], hash);
+          }
+        }
+
+        return newObj;
+      };
+
+      //--------------------------------------test -----------------------------------------------
+      function person(pname) {
+        this.name = pname;
+      }
+      const Messi = new person("Messi");
+
+      function say() {
+        console.log("hi");
+        return "hello";
+      }
+
+      const oldObj = {
+        a: say,
+        b: new RegExp("ab+c", "i"),
+        c: Messi,
+        d: new Date("2020-08-15"),
+        f: [Messi, say, new RegExp("ab+c", "i"), new Date("2020-08-15")],
+      };
+
+      oldObj.e = oldObj; // 循环引用
+
+      const newObject = cloneDeep(oldObj);
+
+      console.log(newObject);
+      console.log(newObject.a());
+      console.log(newObject.b.exec("abBc"));
+      console.log(newObject.c.name);
+      console.log(newObject.c.constructor);
+      console.log(newObject.d.getTime());
+      console.log(newObject.f);
+```
